# projeto-fiec-antaq

./: .gitignore  Dockerfile  docker-compose.override.yml  pyproject.toml
.astro/: config.yaml
dags/: etl_antaq.py  teste_minio.py
include/minio/.minio.sys/: format.json
include/minio/.minio.sys/tmp/.trash/1dbfbc58-a6b7-4bff-88f2-5dd2e1953e73/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/2ab1a463-99a2-4620-ad9c-357d6ba9eeeb/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/315bb079-2e70-4701-ad41-3bd0f219dafb/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/3b8fc788-e577-44d4-a05e-82f4a90e213d/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/4725e652-08e0-4f4b-be6d-1e77e3bca5e1/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/49709099-12e5-4727-afba-a4c4138d2ce0/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/4b747151-fb7f-4331-bbdd-f90b2a857b76/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/4e74892f-ed27-4c11-b319-c2049cc5680f/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/59ebfd10-a3c7-4e64-90ba-48b29e0fb0a7/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/715a264d-fe2e-4390-911d-e1c0c64e3c63/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/76df2437-0827-43dd-a54c-1aa1172733ad/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/77aa0c06-5383-4b87-89fb-389c57bb7a68/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/7ca86804-a525-4475-83f8-01a7d67f7a2a/: xl.meta.bkp
include/minio/.minio.sys/tmp/.trash/853cb39a-d6e1-4bd2-bb8d-3f8283894843/: xl.meta.bkp
(+11 files in other folders)
